@@ -22,6 +22,7 @@ S3method(sha1, Date)
 S3method(sha1, default)
 S3method(sha1, integer)
 S3method(sha1, factor)
+S3method(sha1, formula)
 S3method(sha1, "function")
 S3method(sha1, logical)
 S3method(sha1, list)
