@@ -1,7 +1,14 @@
 2019-10-13  Bill Denney <wdenney@humanpredictions.com>
 
-	* R/sha1.R: Fix issue with num2hex() and input of Inf and -Inf
-	* inst/tinytest/test_sha1.R: Add +-Inf and NA/NaN to the tests
+	* R/sha1.R: Add sha1.formula()
+	* NAMESPACE: Idem
+	* man/sha1.rd: Idem
+	* inst/tinytest/test_sha1.R: Add tests for sha1.formula()
+
+2019-10-12  Bill Denney <wdenney@humanpredictions.com>
+
+	* R/sha1.R: Fix issue with num2hex() and input of Inf
+	* inst/tinytest/test_sha1.R: Add Inf to the tests
 
 2019-10-05  Dirk Eddelbuettel  <edd@debian.org>
 
